--- a/log.ipynb
+++ b/log.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled",
+      "name": "log",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNkTEjUfh5JGt6DuH9MEyIm",
+      "authorship_tag": "ABX9TyO1CKVbixWuNOHxym/+EO4r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,8 +35,7 @@
         "\n",
         "Nicholls, S. M., Quick, J. C., Tang, S., & Loman, N. J. (2019). Ultra-deep, long-read nanopore sequencing of mock microbial community standards. Gigascience, 8(5), giz043. https://academic.oup.com/gigascience/article/8/5/giz043/5486468\n",
         "\n",
-        "Los programas de polishing racon y homopolish/helen usan información de calidad por base. En el paper que elegí usan racon.\n",
-        "La idea es seguir los pasos del paper y ver que todo es reproducible, luego ensamblar con flye los últimos datos que publicaron (R10.3) y hacer el polish con distintos pipelines, todos usando la calidad en algún punto\n",
+        "La idea es seguir los pasos del paper y ver que todo es reproducible, luego ensamblar con flye los últimos datos que publicaron (R10.3) y hacer el polish con los protocolos más recomendados, todos usando la calidad en algún punto\n",
         "\n",
         "- Flye + racon x1\n",
         "- Flye + racon x1 + medaka\n",
@@ -51,6 +50,8 @@
         "- Flye + MarginPolish + helen\n",
         "- Flye + MarginPolish + homopolish\n",
         "- Flye + MarginPolish + helen + homopolish\n",
+        "\n",
+        "racon y marginpolish/helen usan información de calidad por base. En el paper que elegí usan racon.\n",
         "\n",
         " <br/>\n",
         "\n",
@@ -144,7 +145,7 @@
         "\n",
         "Con esos cambios pude correr el programa.\n",
         "\n",
-        "Fui borrando los archivos intermedios porque son muy pesados\n"
+        "Estoy teniendo problemas para correr homopolish"
       ]
     }
   ]
