--- a/log.ipynb
+++ b/log.ipynb
@@ -144,7 +144,7 @@
         "\n",
         "Con esos cambios pude correr el programa.\n",
         "\n",
-        "Estoy teniendo problemas para correr homopolish"
+        "Tuve problemas para correr homopolish, según [esta](https://github.com/ythuang0522/homopolish/issues/17#issuecomment-728980231) respuesta en el github de homopolish, es porque aún no hicieron el release del módulo correspondiente al flag `--meta`, por ahora lo corro sin ese flag."
       ]
     }
   ]
