--- a/mock/log_mockcommunity.ipynb
+++ b/mock/log_mockcommunity.ipynb
@@ -34,9 +34,9 @@
         "\n",
         "Nicholls, S. M., Quick, J. C., Tang, S., & Loman, N. J. (2019). Ultra-deep, long-read nanopore sequencing of mock microbial community standards. Gigascience, 8(5), giz043. https://academic.oup.com/gigascience/article/8/5/giz043/5486468\n",
         "\n",
-        "La idea es seguir los pasos del paper y ver que todo es reproducible, luego ensamblar con flye los últimos datos que publicaron (R10.3) y hacer el polish sobre el flye-raw (40-polishing/filtered_contigs.fasta) y sobre el assembly final (assembly.fasta) siguiendo los protocolos más recomendados, todos usando la calidad en algún punto. \n",
+        "La idea es seguir los pasos del paper y ver que todo es reproducible, luego ensamblar con flye los últimos datos que publicaron (R10.3) y hacer el polish sobre el flye-raw (30-contigger/contigs.fasta) siguiendo los protocolos más recomendados, todos usando la calidad en algún punto. \n",
         "\n",
-        "Los programas de polishing a usar son racon, medaka, marginPolish, HELEN. De ellos, racon y marginPolish usan información de calidad por base. medaka y helen usan redes neurales recurrentes y fueron diseñados para corregir la salida de racon y marginPolish respectivamente. \n",
+        "Los programas de polishing a usar son racon, medaka, marginPolish, y HELEN. De ellos, racon y marginPolish usan información de calidad por base. medaka y helen usan redes neurales recurrentes y fueron diseñados para corregir la salida de racon y marginPolish respectivamente. \n",
         "\n",
         "Del github de marginPolish: \"If quality scores are present, the base likelihood is factored into alignment weight estimation\".\n",
         "\n",
@@ -109,15 +109,15 @@
         "\n",
         "**Algunos problemas con los programas**\n",
         "\n",
-        "Racon carga muy lento los reads comprimidos, es mejor dárselos sin comprimir. \n",
+        "Racon 1.3.2 carga muy lento los reads comprimidos, es mejor dárselos sin comprimir. \n",
         "\n",
         "minimap2 y racon no se pueden usar con nohup porque la salida estándar va a parar al archivo final. Se puede poner el comando dentro de un script y llamar al script con nohup.\n",
         "\n",
-        "El primer intento de correr racon me dio el siguiente error:\n",
+        "El primer intento de correr racon 1.3.2 me dio el siguiente error:\n",
         "```\n",
         "[racon::Polisher::initialize] error: empty overlap set!\n",
         "```\n",
-        "Hay que borrar el newline al final del archivo .paf de minimap2, y voila!\n",
+        "Hay que borrar el newline al final del archivo .paf de minimap2, y voila! Esto no me pasó con racon 1.4.3, pero con esa versión estuve usando *.sam en lugar de *.paf\n",
         "\n",
         "La versión 0.5.0 de medaka tiene problemas de incompatibilidad con la nueva versión de tensorflow. \n",
         "Tuve que reemplazar `tf` por `tf.compat.v1` en varios lugares de algunos scripts (todo lo que iba dando error), esos archivos fueron:\n",
@@ -126,16 +126,21 @@
         "\n",
         "En el archivo medaka-0.5.0/venv/lib/python3.8/site-packages/medaka-0.5.0-py3.8-linux-x86_64.egg/medaka/common.py tuve que cambiar, en la linea 443, `raise StopIteration` por `return`. Esto es porque en las últimas versión de python (>3.7) cambió cómo se usan los generators: `StopIteration` ahora genera una excepción en lugar de simplemente terminar la vida útil del generator como antes (antes la excepción era silenciada).\n",
         "\n",
-        "La última versión de medaka (1.2.1) instalada desde conda tiene un bug en el uso de threads. Conviene dejar el default, si no termina usando todos los threads de la máquina. Lo malo es que el mapping con un solo thread es muy lento.\n",
+        "La versión de `samtools view` que usa medakav1.2.1 (samtools 1.10) cuando llama a mini_align tiene un bug en el multithreading, por lo que edité la linea que llama a `samtools view` en el script mini_align (borré `-@ ${THREADS}`). También la parte de `medaka consensus` tiene un bug en el multithreading, si se indica 1 thread usa 16 threads, si se indica más de 1 thread toma todos los threads de la máquina. Edité el script medaka_consensus en la parte que llama a `medaka consensus`: en la linea 128 cambié `--threads ${THREADS}` por `--threads 1`.\n",
         "\n",
         "El menor número de threads que puede usar HELEN es 8, cualquier número menor (incluso el default) hace saltar un error de que espera un \"positive integer\", seguramente un bug.\n",
         "Aparte de eso HELEN falla antes de terminar a veces y no tengo claro por qué (no da ningún error, sólo termina). No es un tema de memoria.\n",
         "\n",
         "<br/>\n",
         "\n",
-        "**Notas**\n",
+        "**Selección de contigs más largos**\n",
         "\n",
-        "El polishing sobre el ensamblado final lo hice sobre todos los contigs, para hacer el polishing sobre el ensamblado raw primero seleccioné los 8 contigs más largo como hacen en el paper.\n",
+        "Antes de hacer el polishing seleccioné los 8 contigs más largos:\n",
+        "\n",
+        "```\n",
+        "infoseq --only  --length --name asm-flye-TODOS.fa | awk '{print $2, $1}' | sort -nr | head -n8 | cut -d' ' -f2 > lista_contigs_mayores\n",
+        "fastaUtils.pl -u asm-flye-TODOS.fa | grep --no-group-separator -A 1 -w -f lista_contigs_mayores > r10-flye-selected.fasta\n",
+        "```\n",
         "\n",
         "<br/>\n",
         "\n",
@@ -144,12 +149,6 @@
         "Para la evaluación, uso [fastmer.py](https://github.com/jts/assembly_accuracy) (per-genome accuracy) y metaQUAST (plots, #missmatches).\n",
         "La idea es usar las referencias de illumina para evaluar los missmatches de los 8 contigs mas largos, que corresponden al ensamblaje completo de las bacterias de la comunidad, tal como hicieron en el paper. Los missassemblies los evaluaron usando las referencias de pacbio, pero eso no es relevante para este trabajo.\n",
         "\n",
-        "Seleccioné los 8 contigs más largos de cada ensamblaje a evaluar:\n",
-        "\n",
-        "```\n",
-        "infoseq --only  --length --name r10-asm.fasta | awk '{print $2, $1}' | sort -nr | head -n8 | cut -d' ' -f2 > lista_contigs_mayores\n",
-        "fastaUtils.pl -u r10-asm.fasta | grep --no-group-separator -A 1 -w -f lista_contigs_mayores > r10-asm-select.fa\n",
-        "```\n",
         "\n",
         "Evaluación con metaQUAST:\n",
         "```\n",
