--- a/mock/log_mockcommunity.ipynb
+++ b/mock/log_mockcommunity.ipynb
@@ -117,7 +117,7 @@
         "```\n",
         "[racon::Polisher::initialize] error: empty overlap set!\n",
         "```\n",
-        "Hay que borrar el newline al final del archivo .paf de minimap2, y voila! Esto no me pasó con racon 1.4.3, pero con esa versión estuve usando *.sam en lugar de *.paf\n",
+        "Hay que borrar el newline al final del archivo .paf de minimap2, y voila! Esto no me pasó con racon 1.4.3, pero con esa versión estuve usando `.sam` en lugar de `.paf`.\n",
         "\n",
         "La versión 0.5.0 de medaka tiene problemas de incompatibilidad con la nueva versión de tensorflow. \n",
         "Tuve que reemplazar `tf` por `tf.compat.v1` en varios lugares de algunos scripts (todo lo que iba dando error), esos archivos fueron:\n",
@@ -126,7 +126,9 @@
         "\n",
         "En el archivo medaka-0.5.0/venv/lib/python3.8/site-packages/medaka-0.5.0-py3.8-linux-x86_64.egg/medaka/common.py tuve que cambiar, en la linea 443, `raise StopIteration` por `return`. Esto es porque en las últimas versión de python (>3.7) cambió cómo se usan los generators: `StopIteration` ahora genera una excepción en lugar de simplemente terminar la vida útil del generator como antes (antes la excepción era silenciada).\n",
         "\n",
-        "La versión de `samtools view` que usa medakav1.2.1 (samtools 1.10) cuando llama a mini_align tiene un bug en el multithreading, por lo que edité la linea que llama a `samtools view` en el script mini_align (borré `-@ ${THREADS}`). También la parte de `medaka consensus` tiene un bug en el multithreading, si se indica 1 thread usa 16 threads, si se indica más de 1 thread toma todos los threads de la máquina. Edité el script medaka_consensus en la parte que llama a `medaka consensus`: en la linea 128 cambié `--threads ${THREADS}` por `--threads 1`.\n",
+        "La versión de `samtools view` que usa medakav1.2.1 (samtools 1.10) cuando llama a mini_align tiene un bug en el multithreading, por lo que edité la linea que llama a `samtools view` en el script mini_align (borré `-@ ${THREADS}`). \n",
+        "\n",
+        "También la parte de `medaka consensus` tiene un bug en el multithreading, si se indica 1 thread usa 16 threads, si se indica más de 1 thread toma todos los threads de la máquina. Edité el script medaka_consensus en la parte que llama a `medaka consensus`: en la linea 128 cambié `--threads ${THREADS}` por `--threads 1`, de esa forma puedo usar multithreading en otras partes.\n",
         "\n",
         "El menor número de threads que puede usar HELEN es 8, cualquier número menor (incluso el default) hace saltar un error de que espera un \"positive integer\", seguramente un bug.\n",
         "Aparte de eso HELEN falla antes de terminar a veces y no tengo claro por qué (no da ningún error, sólo termina). No es un tema de memoria.\n",
@@ -146,19 +148,22 @@
         "\n",
         "**Evaluación**\n",
         "\n",
-        "Para la evaluación, uso [fastmer.py](https://github.com/jts/assembly_accuracy) (per-genome accuracy) y metaQUAST (plots, #missmatches).\n",
-        "La idea es usar las referencias de illumina para evaluar los missmatches de los 8 contigs mas largos, que corresponden al ensamblaje completo de las bacterias de la comunidad, tal como hicieron en el paper. Los missassemblies los evaluaron usando las referencias de pacbio, pero eso no es relevante para este trabajo.\n",
+        "Para la evaluación estoy usando metaQUAST. TODO:  probar [fastmer.py](https://github.com/jts/assembly_accuracy) (per-genome accuracy).\n",
+        "La idea es usar las referencias de illumina para evaluar los missmatches antes y después de cada etapa polishing de los 8 contigs mas largos, tal como hicieron en el paper. Los missassemblies los evaluaron usando las referencias de pacbio, pero eso no es relevante para este trabajo.\n",
         "\n",
-        "\n",
-        "Evaluación con metaQUAST:\n",
-        "```\n",
-        "metaquast.py --fragmented --min-identity 90 --min-contig 5000 --threads 28 -r ../../illumina_ref_asm/bac/ -o metaquast-selected-ill *.fasta\n",
-        "```\n",
         "<br/>\n",
         "\n",
-        "**Resultados**\n",
+        "**Cuantizar los datos de calidad**\n",
         "\n",
-        "Los pulidos mor margin/helen empeoran bastante con respecto al sin pulir, probablemente esté usando un modelo incorrecto. Por ahora escribí a la gente del paper para saber qué modelo de guppy usaron para el basecalling, cuando respondan capaz puedo elegir mejor el modelo de margin/helen."
+        "Hice un script en python que toma como entrada un fastq y devuelve el fastq con sólo 4 valores de calidad:\n",
+        "- si qscore <= 7 -> newqscore = 6\n",
+        "- si 8 <= qscore <= 13 -> newqscore = 12\n",
+        "- si 14 <= qscore <= 19 -> newqscore = 18\n",
+        "- si qscore >= 20 -> newqscore = 24\n",
+        "\n",
+        "Es una primera idea de cómo definir los bins, no hay nada que respalde esta elección, pero me parece claro que los bins de illumina no funcionan para los datos de nanopore porque la calidad media de illumina es mucho mayor.\n",
+        "\n",
+        "Hice el binning de los valores de calidad de los reads de la secuencicion con el poro r10, y a esos datos le apliqué el mismo pipeline que a los datos originales de r10."
       ]
     },
     {
